resources/assets/less/bem/beatmapset-watches.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.beatmapset-watches {
  color: white;
  margin: 20px;

  &__col {
    &--cover {
      width: 70px;
      padding: 0;
    }

    && { // bootstrap override
      vertical-align: middle;
      border-top: 2px solid @osu-colour-b4;
    }
  }

  &__cover {
    .default-border-radius();
    width: 70px;
    height: 60px;
    background-size: cover;
    background-position: center;
    overflow: hidden;
  }

  &__description {
    margin-bottom: 20px;
  }

  &__heading {
    border-top: none !important;
  }

  &__link {
    color: @osu-colour-l1;
    .link-hover({ color: white });
  }
}

